# Vypertron-Snake

./: .gitignore  Cargo.toml  README.md
src/: cpu_snake.rs  effects.rs  food.rs  game_plugin.rs  grid.rs  level.rs  lib.rs  main.rs  score.rs  snake.rs  themes.rs
src/audio/: mod.rs
src/components/: mod.rs
src/levels/: mod.rs
src/resources/: game_timer.rs  mod.rs
src/states/: mod.rs
src/systems/: collision.rs  effects.rs  food.rs  input.rs  mod.rs  snake.rs  ui.rs
src/utils/: mod.rs
wasm-temp/: .rustc_info.json
wasm-temp/release/.fingerprint/cfg-if-af08502c146cc273/: output-lib-cfg_if
wasm-temp/release/.fingerprint/cfg-if-c6d0dda5c7284520/: output-lib-cfg_if
wasm-temp/release/.fingerprint/getrandom-c6739071082e141a/: output-build-script-build-script-build
wasm-temp/release/.fingerprint/pkg-config-95ba49c0780c19c6/: output-lib-pkg_config
wasm-temp/release/.fingerprint/proc-macro2-55d43a5f543f612d/: output-build-script-build-script-build
wasm-temp/release/.fingerprint/serde-883273162234833f/: output-build-script-build-script-build
wasm-temp/release/.fingerprint/shlex-35ab51f09a2e0161/: output-lib-shlex
wasm-temp/release/.fingerprint/stable_deref_trait-0cddb107f804f61d/: output-lib-stable_deref_trait
wasm-temp/release/.fingerprint/typenum-f51a0db1f8fb82c0/: output-build-script-build-script-build
wasm-temp/release/.fingerprint/unicode-ident-f40376275c848f02/: output-lib-unicode_ident
wasm-temp/release/.fingerprint/version_check-ecee75b39792c45e/: output-lib-version_check
wasm-temp/release/.fingerprint/windows_x86_64_msvc-36f95b1ffa8a9e3e/: output-build-script-build-script-build
