[package]
name = "vypertron-snake"
version = "0.1.0"
edition = "2021"
description = "A premium Snake game built with Rust and Bevy - 10 levels, 4 characters, cutscenes, and epic gameplay!"
license = "MIT"
repository = "https://github.com/yourusername/Vypertron-Snake"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
bevy = { version = "0.12", features = [
    "default",
    "wav",
    "vorbis",
    "mp3",
    "png",
    "bevy_ui",
    "bevy_text",
    "bevy_sprite",
    "bevy_asset",
    "bevy_scene",
    "bevy_audio",
    "bevy_animation",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_window",
    "bevy_winit",
    "bevy_transform",
    "bevy_input",
    "bevy_time"
] }

# For serialization of high scores and game state
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For procedural sound generation
rodio = { version = "0.17", features = ["wav", "mp3"], optional = true }

# Random number generation for game mechanics
rand = "0.8"

# For web deployment
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }

# For local storage in browser (high scores)
gloo-storage = { version = "0.2", optional = true }

[features]
default = ["desktop"]
desktop = ["rodio"]
web = [
    "wasm-bindgen", 
    "web-sys", 
    "js-sys", 
    "gloo-storage",
    "bevy/webgl2"
]

# Web assembly optimization
[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1

# Development profile for fast builds
[profile.dev]
opt-level = 1

# Web-specific configuration
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[[bin]]
name = "vypertron-snake"
path = "src/main.rs"