[package]
name = "vypertron-snake"
version = "0.1.0"
edition = "2021"
description = "A premium Snake game built with Rust and Bevy - 10 levels, 4 characters, cutscenes, and epic gameplay!"
license = "MIT"
repository = "https://github.com/yourusername/Vypertron-Snake"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
bevy = { version = "0.12", features = [
    "default",
    "wav",
    "vorbis", 
    "mp3",
    "png"
] }

# For serialization of high scores and game state
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation for game mechanics
rand = "0.8"

# For getting user data directory (desktop)
dirs = "5.0"

# For web deployment
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
gloo-storage = "0.2"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

# Web assembly optimization
[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1

# Development profile for fast builds
[profile.dev]
opt-level = 1

[[bin]]
name = "vypertron-snake"
path = "src/main.rs"
