[package]
name = "vypertron-snake"
version = "0.1.0"
edition = "2021"
description = "A premium Snake game built with Rust and Bevy - 10 levels, 4 characters, cutscenes, and epic gameplay!"
license = "MIT"
repository = "https://github.com/yourusername/Vypertron-Snake"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
bevy = { version = "0.14", features = ["default", "wav", "vorbis", "mp3", "png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
dirs = "5.0"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 1

[[bin]]
name = "vypertron-snake"
path = "src/main.rs"


